--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/home.css">
-    <title>Nitroneedles</title>
+    <link rel="stylesheet" href="../css/contact.css">
+    <title>Contact Nitro</title>
 </head>
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="./pages/about.html">About</a></li>
-            <li><a href="./pages/contact.html">Contact</a></li>
-            <li><a href="./pages/nitrodelas.html">Nitrodelas</a></li>
-            <li><a href="./pages/socialproject.html">Social Projects</a></li>
-            <li><a href="./pages/galeria.html">Galerie</a></li> 
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./nitrodelas.html">Nitrodelas</a></li>
+            <li><a href="./socialproject.html">Social Projects</a></li>
+            <li><a href="./galeria.html">Galerie</a></li> 
             <!-- para adicionar um item somente no menu, alterar somente a ul class sidebar -->
         </ul>
         <ul>
             <li class="hideOnMobile"><a href="index.html">Home</a></li>
-            <li class="hideOnMobile"><a href="./pages/about.html">About</a></li>
-            <li class="hideOnMobile"><a href="./pages/contact.html">Contact</a></li>
+            <li class="hideOnMobile"><a href="./about.html">About</a></li>
+            <li class="hideOnMobile"><a href="contact.html">Contact</a></li>
             <li onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ec782b"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
